hero section created

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             </ul>
         </div>
     </section>
+    <section id="hero">
+        <h4>Trade-in-offer</h4>
+        <h2>Super value deals</h2>
+        <h1>On all products</h1>
+        <p>Save more with coupons & upto 70% off!</p>
+        <button>Shop Now</button>
+
+    </section>
 
     <script src="https://kit.fontawesome.com/c3d008535c.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
