feature section added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,33 @@
         <button>Shop Now</button>
 
     </section>
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="img/features/f1.png" >
+            <h6>Free Shiping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f2.png" >
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f3.png" >
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f4.png" >
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f5.png" >
+            <h6>Happy sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f6.png" >
+            <h6>24/7 Support</h6>
+        </div>
+
+    </section>
 
     <script src="https://kit.fontawesome.com/c3d008535c.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
