--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <li><a href="cart.html"><i id="lg-bag" class="fa-solid fa-cart-shopping"></i></a></li>
+                <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
         </div>
+        <div id="mobile">
+            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
+         </div>
     </section>
     <section id="hero">
         <h4>Trade-in-offer</h4>
@@ -371,6 +376,54 @@
         <button class="normal">Sign Up</button>
     </div>
     </section>
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" src="img/logo.png" >
+            <h4>Contacts</h4>
+            <p><strong>Address:</strong> 562 Wellington Road,Street 32,San Francisco</p>
+            <p><strong>Phone:</strong> +01 2222 365 /(+91)01 2345 6789</p>
+            <p><strong>Hours:</strong>10.00 - 18.00, Mon-Sat</p>
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+        <div class="col install">
+            <h4>Install App</h4>
+            <p>From App Store Or Google Play</p>
+            <div class="row">
+                <img src="img/pay/app.jpg" >
+                <img src="img/pay/play.jpg">
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="img/pay/pay.png">
+        </div>
+        <div class="copyright">
+            <p>@ 2023, Aisacjose - HTML CSS Ecommerce Template</p>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/c3d008535c.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
