about page created

--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,7 @@
             <i id="bar" class="fas fa-outdent"></i>
          </div>
     </section>
-    <section id="page-header">
+    <section id="page-header" class="shop-header">
        <h2>#Stay Home</h2>
         <p>Save more with coupons & upto 70% off!</p>
     </section>
